--- a/javasript/javas_html.HTML
+++ b/javasript/javas_html.HTML
@@ -10,10 +10,10 @@
 <body style="background-color: black;">
     <h1 style="color: rgb(6, 173, 6);">this code is javasrpit code</h1>
 
-    <div id="ID">
-        <p style="color: rgb(6, 173, 6); ">this is the div. </p>
+    <div id="ID">   
+        <p saurav="newClass" style="color: rgb(6, 173, 6); ">this is the div. </p>
     </div>
-    <script src="22_DOM.js"></script>
+    <script src="23_DOM( style ).js"></script>
 </body>
 
 </html>
