--- a/javasript/javas_html.HTML
+++ b/javasript/javas_html.HTML
@@ -11,9 +11,9 @@
     <h1 style="color: rgb(6, 173, 6);">this code is javasrpit code</h1>
 
     <div id="ID">   
-        <p saurav="newClass" style="color: rgb(6, 173, 6); ">this is the div. </p>
+        <p saurav="newClass" class="CLASS" style="color: rgb(6, 173, 6); ">this is the div. </p>
     </div>
-    <script src="23_DOM( style ).js"></script>
+    <script src="27_Event_LIsteners.js"></script>
 </body>
 
 </html>
