--- a/GitHub/weather reporting web/index.html
+++ b/GitHub/weather reporting web/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Weather App</title>
+  <title>Weather reporting web</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
@@ -18,7 +18,7 @@
     </video>
 
     <div class="card">
-      
+
       <div class="search-bar">
         <input type="text" placeholder="Enter Your City Name" spellcheck="false" />
         <i class="fa-solid fa-magnifying-glass" id="btn"></i>
