--- a/javasript/30_rokc_paper_scissiors.js/index.html
+++ b/javasript/30_rokc_paper_scissiors.js/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>rock paper scissiors GAME</title>
 </head>
+
 <body>
-    <h1 class = "title" >rock paper scissiors</h1>
+    <h1 class="title">rock paper scissiors</h1>
     <div class="choices">
         <img id="rock" src="images/rock.jpg" alt="rock">
         <img id="paper" src="images/paper.jpg" alt=" paper">
         <img id="scissior" src="images/scissors.jpg" alt="scissiors">
     </div>
     <div class="scores">
-        <div class="score" id="you">
-            <p>0</p>
+        <div class="score">
+            <p id="you-s">0</p>
             <p>you</p>
         </div>
         <div class="score" id="comp">
-            <p>0</p>
+            <p id="computer-s">0</p>
             <p>computer</p>
         </div>
     </div>
@@ -28,4 +30,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
