--- a/GitHub/spotify_clone/index.html
+++ b/GitHub/spotify_clone/index.html
@@ -74,9 +74,77 @@
                 </div>
 
             </div>
-            <div class="cards">
+
+            <h2 class="card-top">Recently Played</h2>
+            <div class="cards-container">
+
+                <div class="card">
+                    <img class="card-img" src="./images/card1img.jpeg" alt="img">
+                    <div class="card-tital">Top 50 - Globel</div>
+                    <div class="card-info">You daily update of the most played...</div>
+                </div>
 
             </div>
+
+            <h2 class="card-top"> Spotify original&exclucive podcasts</h2>
+            <div class="cards-container">
+
+                <div class="card">
+                    <img class="card-img" src="./images/card2img.jpeg" alt="img">
+                    <div class="card-tital">Mahiya jinna Sohna</div>
+                    <div class="card-info">Darshan Raval</div>
+                </div>
+
+                <div class="card">
+                    <img class="card-img" src="./images/card3img.jpeg" alt="img">
+                    <div class="card-tital">Pasoori Nu (Fro...</div>
+                    <div class="card-info">Arijit Singh, Rochak Kohli, Tulsi Kumar</div>
+                </div>
+
+                <div class="card">
+                    <img class="card-img" src="./images/card4img.jpeg" alt="img">
+                    <div class="card-tital">Naa read (Fro...</div>
+                    <div class="card-info">Anirudh ravichander...</div>
+                </div>
+
+                <div class="card">
+                    <img class="card-img" src="./images/card5img.jpeg" alt="img">
+                    <div class="card-tital">Top Songs - Globel</div>
+                    <div class="card-info">Your weekly update of the most played tracks rigth...</div>
+                </div>
+
+                <div class="card">
+                    <img class="card-img" src="./images/card6img.jpeg" alt="img">
+                    <div class="card-tital">Top Songs - India</div>
+                    <div class="card-info">Your weekly update of the most played tracks rigth...</div>
+                </div>
+
+            </div>
+
+            <h2 class="card-top">All Charts</h2>
+            <div class="cards-container">
+
+                <div class="card">
+                    <img class="card-img" src="./images/card6img.jpeg" alt="img">
+                    <div class="card-tital">Top Songs - India</div>
+                    <div class="card-info">Your weekly update of the most played tracks rigth...</div>
+                </div>
+
+                <div class="card">
+                    <img class="card-img" src="./images/card1img.jpeg" alt="img">
+                    <div class="card-tital">Top 50 - Globel</div>
+                    <div class="card-info">You daily update of the most played...</div>
+                </div>
+
+                <div class="card">
+                    <img class="card-img" src="./images/card5img.jpeg" alt="img">
+                    <div class="card-tital">Top Songs - Globel</div>
+                    <div class="card-info">Your weekly update of the most played tracks rigth...</div>
+                </div>
+
+                <div class="footer-line"></div>
+            </div>
+
         </div>
         <!-- /////////////////////////////////////////////////////////////////////////////// -->
         <div class="media-player">palyer</div>
