work in spotify clone css

--- a/GitHub/spotify_clone/index.html
+++ b/GitHub/spotify_clone/index.html
@@ -147,7 +147,24 @@
 
         </div>
         <!-- /////////////////////////////////////////////////////////////////////////////// -->
-        <div class="media-player">palyer</div>
+        <div class="media-player">
+            <div class="left-side"></div>
+            <div class="mid-player">
+                <div class="top">
+                    <img class="top-icon" src="./images/player_icon1.png" alt="icon">
+                    <img class="top-icon" src="./images/player_icon2.png" alt="icon">
+                    <img class="top-icon play-button" src="./images/player_icon3.png" alt="icon">
+                    <img class="top-icon" src="./images/player_icon4.png" alt="icon">
+                    <img class="top-icon" src="./images/player_icon5.png" alt="icon">
+                </div>
+                <div class="bottom">
+                    <div class="curr-time">0:00</div>
+                    <input type="range" min="0" max="100" class="progrees-bar">
+                    <div class="end-time">3:33</div>
+                </div>
+            </div>
+            <div class="right-side"></div>
+        </div>
     </div>
 
 </body>
