compleat spotify clone

--- a/GitHub/spotify_clone/index.html
+++ b/GitHub/spotify_clone/index.html
@@ -148,7 +148,18 @@
         </div>
         <!-- /////////////////////////////////////////////////////////////////////////////// -->
         <div class="media-player">
-            <div class="left-side"></div>
+            <div class="left-side">
+
+                <img class="album-img" src="./images/album_picture.jpeg" alt="img">
+                <div class="song-info">
+                    <p>Daylight</p>
+                    <p>David Kushwaha</p>
+                </div>
+                <img class="album-icon icone1" src="./images/album_icon1.png" alt="img">
+                <img class="album-icon" src="./images/album_icon2.png" alt="img">
+
+            </div>
+
             <div class="mid-player">
                 <div class="top">
                     <img class="top-icon" src="./images/player_icon1.png" alt="icon">
@@ -159,11 +170,18 @@
                 </div>
                 <div class="bottom">
                     <div class="curr-time">0:00</div>
-                    <input type="range" min="0" max="100" class="progrees-bar">
+                    <input type="range" min="0" max="100" class="progress-bar">
                     <div class="end-time">3:33</div>
                 </div>
             </div>
-            <div class="right-side"></div>
+            <div class="right-side">
+                <img class="control-icon" src="./images/controls_icon1.png" alt="">
+                <img class="control-icon" src="./images/controld_icon2.png" alt="">
+                <img class="control-icon control-icon3" src="./images/controls_icon3.png" alt="">
+                <img class="control-icon control-icon4" src="./images/controls_icon4.png" alt="">
+                <img class="control-icon" src="./images/controls_icon5.png" alt="">
+                <input type="range" min="0" max="100" class="vol-progress-bar">
+            </div>
         </div>
     </div>
 
