--- a/javasript/javas_html.HTML
+++ b/javasript/javas_html.HTML
@@ -13,7 +13,7 @@
     <div id="ID">
         <p saurav="newClass" class="CLASS" style="color: rgb(6, 173, 6); ">this is the div. </p>
     </div>
-    <script src="4_even_num(100).js"></script>
+    <script src="7_loops.js"></script>
 </body>
 
 </html>
