--- a/weather pro/index.html
+++ b/weather pro/index.html
@@ -1,156 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
     <title>Weather App Interface</title>
-    <style>
-        /* General Styles */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, sans-serif;
-        }
 
-        body {
-            background: linear-gradient(135deg, #87CEEB, #4682B4);
-            color: white;
-            font-size: 16px;
-            line-height: 1.5;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        /* Navigation Bar */
-        .navbar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background: #005f99;
-            padding: 10px 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        .search-bar {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-
-        .search-bar input {
-            padding: 8px;
-            border-radius: 5px;
-            border: none;
-            outline: none;
-            width: 200px;
-        }
-
-        .search-bar button {
-            padding: 8px 15px;
-            background: #ff9800;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-weight: bold;
-        }
-
-        .search-bar button:hover {
-            background: #e68900;
-        }
-
-        /* Main Weather Section */
-        .main-weather {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background: rgba(255, 255, 255, 0.1);
-            padding: 20px;
-            border-radius: 10px;
-            margin: 20px 0;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        .main-weather .info {
-            flex: 1;
-        }
-
-        .main-weather h1 {
-            font-size: 3rem;
-        }
-
-        .main-weather .details {
-            margin-top: 10px;
-        }
-
-        .main-weather .details p {
-            margin: 5px 0;
-        }
-
-        .main-weather .icon {
-            flex: 0.5;
-            text-align: center;
-        }
-
-        .main-weather .icon img {
-            width: 150px;
-        }
-
-        /* Weekly Forecast */
-        .weekly-forecast {
-            display: grid;
-            grid-template-columns: repeat(5, 1fr);
-            gap: 15px;
-        }
-
-        .day {
-            background: rgba(255, 255, 255, 0.1);
-            text-align: center;
-            padding: 10px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        .day h3 {
-            margin-bottom: 10px;
-        }
-
-        .day img {
-            width: 60px;
-        }
-
-        .day p {
-            margin-top: 5px;
-        }
-
-        /* Footer */
-        .footer {
-            text-align: center;
-            margin-top: 20px;
-            padding: 10px;
-            background: #005f99;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        .footer a {
-            color: white;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        .footer a:hover {
-            text-decoration: underline;
-        }
-
-    </style>
 </head>
+
 <body>
     <div class="container">
         <!-- Navigation Bar with Search Box -->
@@ -179,31 +37,41 @@
             </div>
         </div>
 
-        <!-- Weekly Forecast Section -->
+        <!-- next 7 days Forecast Section -->
         <div class="weekly-forecast">
-            <div class="day">
+            <div class="day" id="monday">
                 <h3>Monday</h3>
-                <img src="images/partly-cloudy.png" alt="Partly Cloudy">
+                <img src="" alt="">
                 <p>High: --° Low: --°</p>
             </div>
-            <div class="day">
+            <div class="day" id="tuesday">
                 <h3>Tuesday</h3>
-                <img src="images/sunny.png" alt="Mostly Sunny">
+                <img src="" alt="">
                 <p>High: --° Low: --°</p>
             </div>
-            <div class="day">
+            <div class="day" id="wednesday">
                 <h3>Wednesday</h3>
-                <img src="images/partly-cloudy.png" alt="Partly Cloudy">
+                <img src="" alt="">
                 <p>High: --° Low: --°</p>
             </div>
-            <div class="day">
+            <div class="day" id="thursday">
                 <h3>Thursday</h3>
-                <img src="images/showers.png" alt="Few Showers">
+                <img src="" alt="">
                 <p>High: --° Low: --°</p>
             </div>
-            <div class="day">
+            <div class="day" id="friday">
                 <h3>Friday</h3>
-                <img src="images/partly-cloudy.png" alt="Partly Cloudy">
+                <img src="" alt="">
+                <p>High: --° Low: --°</p>
+            </div>
+            <div class="day" id="saturday">
+                <h3>Saturday</h3>
+                <img src="" alt="">
+                <p>High: --° Low: --°</p>
+            </div>
+            <div class="day" id="sunday">
+                <h3>Sunday</h3>
+                <img src="" alt="">
                 <p>High: --° Low: --°</p>
             </div>
         </div>
@@ -215,4 +83,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
