--- a/javasript/revision/new_web/index.html
+++ b/javasript/revision/new_web/index.html
@@ -28,15 +28,16 @@
 </head>
 
 <body>
+    <!-- header of web -->
     <div class="container">
         <div class="top-bar">
             <div class="toggle-darkmode">Dark Mode</div>
             <div class="search-box">
                 <input type="text" placeholder="Search for your preferred city...">
             </div>
-            <div class="location-btn">Current Location</div>
+            <div class="location-btn">Get Weather</div>
         </div>
-
+        <!-- main part of web -->
         <div class="section">
             <div class="card center card_time">
                 <div class="title">Athens</div>
@@ -54,9 +55,9 @@
                 <div class="weather-info">🌞 UV: 8</div>
             </div>
         </div>
-
+        <!-- footer of web -->
         <div class="section">
-            <div class="card">
+            <div class="card days">
                 <div class="title">5 Days Forecast:</div>
                 <div class="forecast">
                     <div class="card">🌤<br>20&deg;C<br>Fri, 1 Sep</div>
@@ -66,7 +67,7 @@
                     <div class="card">🌨<br>16&deg;C<br>Tue, 5 Sep</div>
                 </div>
             </div>
-            <div class="card">
+            <div class="card Hourly">
                 <div class="title">Hourly Forecast:</div>
                 <div class="forecast">
                     <div class="card">12:00<br>☀️<br>26&deg;C<br>3km/h</div>
